@@ -35,6 +35,9 @@ Updated wxColumnSorterMixin to also be able to place sort icons on the
 column headers, and updated the wxListCtrl demo to show it off by
 using wxColumnSorterMixin.
 
+Added wxGenBitmapTextButton contrib from Lorne White.
+
+
 
 
 2.3.1
